tests/baselines/reference/generatorTypeCheck25.errors.txt
generatorTypeCheck25.ts(1,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
generatorTypeCheck25.ts(2,25): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
generatorTypeCheck25.ts(3,13): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
generatorTypeCheck25.ts(4,5): error TS2322: Type '() => Generator<Bar | Baz | undefined, void, unknown>' is not assignable to type '() => Iterable<Foo>'.
  Call signature return types 'Generator<Bar | Baz | undefined, void, unknown>' and 'Iterable<Foo>' are incompatible.
    The types returned by '[Symbol.iterator]().next(...)' are incompatible between these types.
      Type 'IteratorResult<Bar | Baz | undefined, void>' is not assignable to type 'IteratorResult<Foo, any>'.
        Type 'IteratorYieldResult<Bar | Baz | undefined>' is not assignable to type 'IteratorResult<Foo, any>'.
          Type 'IteratorYieldResult<Bar | Baz | undefined>' is not assignable to type 'IteratorYieldResult<Foo>'.
            Type 'Bar | Baz | undefined' is not assignable to type 'Foo'.
              Type 'undefined' is not assignable to type 'Foo'.


==== generatorTypeCheck25.ts (4 errors) ====
    class Foo { x: number }
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    class Bar extends Foo { y: string }
                            ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    class Baz { z: number }
                ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
    var g3: () => Iterable<Foo> = function* () {
        ~~
!!! error TS2322: Type '() => Generator<Bar | Baz | undefined, void, unknown>' is not assignable to type '() => Iterable<Foo>'.
!!! error TS2322:   Call signature return types 'Generator<Bar | Baz | undefined, void, unknown>' and 'Iterable<Foo>' are incompatible.
!!! error TS2322:     The types returned by '[Symbol.iterator]().next(...)' are incompatible between these types.
!!! error TS2322:       Type 'IteratorResult<Bar | Baz | undefined, void>' is not assignable to type 'IteratorResult<Foo, any>'.
!!! error TS2322:         Type 'IteratorYieldResult<Bar | Baz | undefined>' is not assignable to type 'IteratorResult<Foo, any>'.
!!! error TS2322:           Type 'IteratorYieldResult<Bar | Baz | undefined>' is not assignable to type 'IteratorYieldResult<Foo>'.
!!! error TS2322:             Type 'Bar | Baz | undefined' is not assignable to type 'Foo'.
!!! error TS2322:               Type 'undefined' is not assignable to type 'Foo'.
        yield;
        yield new Bar;
        yield new Baz;
        yield *[new Bar];
        yield *[new Baz];
    }